<resources>
    <string name="app_name">Todo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="title">Input new task here</string>
    <string name="description">Input description here</string>
    <string name="delete">Delete</string>
    <string name="no_category">No Category</string>
    <string name="new_category">Create new category</string>
    <string name="input_here">Input here</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="check_all_completed_tasks">Check all completed tasks</string>
    <string name="update">Update</string>
    <string name="nothing">Nothing to see here yet.</string>
    <string name="when_you">When you completed the task, you\'ll see it here.</string>
    <string name="when_you_add">When you added some task, you\'ll see it here.</string>
    <string name="all">All</string>
    <string name="close">Close</string>
    <string name="see_all_tasks">See all tasks</string>
</resources>