<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_category"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="15dp"
    android:paddingTop="15dp">

    <TextView
        android:id="@+id/text_new_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:text="@string/new_category"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_new_category"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_input"
        android:hint="@string/input_here"
        android:paddingHorizontal="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey_300"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_new_category" />

    <Button
        android:id="@+id/button_cancel_category"
        style="@style/Widget.AppCompat.Light.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/blue_a_400"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button_save_category"
        app:layout_constraintTop_toBottomOf="@+id/edt_new_category" />

    <Button
        android:id="@+id/button_save_category"
        style="@style/Widget.AppCompat.Light.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@color/blue_a_700"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_new_category" />
</androidx.constraintlayout.widget.ConstraintLayout>