<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.HomeFragment">

    <RelativeLayout
        android:id="@+id/rel_text_nothing_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <TextView
            android:id="@+id/text_nothing_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:text="@string/nothing"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_nothing_home"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="30dp"
            android:text="@string/when_you_add" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lin_chip_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.9"
            android:scrollbars="none">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                app:singleSelection="true" />
        </HorizontalScrollView>

        <ImageButton
            android:id="@+id/button_category_add"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:background="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/ic_category"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="25dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_add"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/floating_add"
        android:layout_alignStart="@+id/floating_add"
        android:layout_alignLeft="@+id/floating_add"
        android:layout_alignEnd="@+id/floating_add"
        android:layout_alignRight="@+id/floating_add"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:src="@drawable/ic_create"
        android:visibility="invisible"
        app:backgroundTint="@color/orange_a_700"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/floating_create"
        android:layout_alignEnd="@+id/floating_create"
        android:layout_alignRight="@+id/floating_create"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:src="@drawable/ic_calendar_range"
        android:visibility="invisible"
        app:backgroundTint="@color/yellow_a_700" />

    <TextView
        android:id="@+id/text_check_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin_chip_category"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/check_all_completed_tasks"
        android:textSize="12sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_todo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/text_check_all"
        android:layout_marginTop="15dp" />

</RelativeLayout>