<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_category"
        style="@style/Widget.MaterialComponents.Chip.Action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/no_category"
        android:textColor="@color/grey_600"
        app:chipBackgroundColor="@color/grey_50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_description_add" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_category_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/button_time_add"
        app:layout_constraintTop_toBottomOf="@+id/edt_description_add" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_description_add"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/edt_title_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_input"
        android:focusable="true"
        android:hint="@string/title"
        android:inputType="text"
        android:paddingHorizontal="15dp"
        android:paddingVertical="20dp"
        android:textColorHint="@color/grey_300"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_description_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_arrow_right"
        android:drawableLeft="@drawable/ic_arrow_right"
        android:drawableTint="@color/grey_300"
        android:focusable="true"
        android:hint="@string/description"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingVertical="10dp"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingEnd="15dp"
        android:paddingRight="15dp"
        android:textColorHint="@color/grey_300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_title_add"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/button_date_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:minHeight="48dp"
        android:src="@drawable/ic_calendar"
        app:layout_constraintStart_toEndOf="@+id/chip_category"
        app:layout_constraintTop_toBottomOf="@+id/edt_description_add"
        app:tint="@color/blue_a_700"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/button_time_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:minHeight="48dp"
        android:src="@drawable/ic_time"
        app:layout_constraintStart_toEndOf="@+id/button_date_add"
        app:layout_constraintTop_toBottomOf="@+id/edt_description_add"
        app:tint="@color/blue_a_700"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/text_date_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/blue_a_700"
        android:textSize="9sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button_date_add"
        app:layout_constraintEnd_toEndOf="@+id/button_date_add"
        app:layout_constraintStart_toStartOf="@+id/button_date_add"
        app:layout_constraintTop_toTopOf="@+id/button_date_add" />


</androidx.constraintlayout.widget.ConstraintLayout>